# harness

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HARNESS_OVERVIEW.md  README.md  harness.toml  harness_api.py
.agents/personas/: aud.md  ba.md  be.md  fe.md  pm.md  qa.md
.agents/rules/: harness.md
.agents/skills/: SKILL_WRAPPER_SPEC.md
.agents/workflow/: code-review.md  dev-story.md  harness-loop.md  quick-dev.md
.claude/: settings.local.json
.cursor/rules/: harness-advanced-elicitation.mdc  harness-agent-analyst.mdc  harness-agent-architect.mdc  harness-agent-dev.mdc  harness-agent-pm.mdc  harness-agent-tech-writer.mdc  harness-agent-ux-designer.mdc  harness-brainstorming.mdc  harness-check-implementation-readiness.mdc  harness-checkpoint-preview.mdc  harness.mdc  (+25 more)
crates/harness-web/: Cargo.toml
crates/harness-web/src/: main.rs
crates/harness-web/ui/: app.js  index.html  style.css
docs/: ARCHITECTURE_UML.md  HARNESS.md  README.md  SKILLS_UML.md  TASK_FLOW.md  TEST_INFRA.md  TEST_READY.md  UML_GUIDE.md  architecture.txt  architecture.uml
scripts/: README.md  bootstrap-project.sh  build-harness-cli-release.sh  demo-workflow.sh  harness  install-global.sh  install-harness.ps1  install-harness.sh  install-ide-skills.sh  pm-skills-runner  seed_demo_data.sql  sync-pm-skills.py
src/: application.rs  domain.rs  infrastructure.rs  interface.rs  main.rs  mcp.rs
tests/: runner_inputs_report.md  spaces_in_paths_report.md  stress_test_results.md  stress_test_sync.py  test_runner_inputs.py  test_spaces_in_paths.py
(+190 files in other folders)
