[package]
name = "harness"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baobao0303/harness"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
tempfile = "3.27.0"
