[package]
name = "harness-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
